[tool.poetry]
name = "cryptol"
version = "3.3.0.99"
readme = "README.md"
keywords = ["cryptography", "verification"]
description = "Cryptol client for the Cryptol RPC server"
authors = ["Galois, Inc. <cryptol-team@galois.com>"]

license = "BSD License"
include = [
    "LICENSE",
    "mypy.ini",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
BitVector = "^3.4.9"
argo-client = ">=0.0.13"
typing-extensions = "^4.1.1"

requests = ">=2.31.0"
urllib3 = ">=2.2.0"
types-requests = ">=2.31.0"

[tool.poetry.dev-dependencies]
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
